# forex-trader

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: backtesting.md  dashboard.md  glossary.md  live-mode.md
docs/plans/: 2026-06-22-evidence-harden-live-loop.md  2026-06-22-forex-trading-agent.md  2026-06-23-market-analysis-walkforward.md
docs/reports/: dashboard-spec.md  report-spec.md
docs/research/: conclusion-no-simple-edge.md  edge-opening-range-breakout.md  edge-regime-reversion.md  edge-search-log.md  edge-vwap-reversion.md  (+6 more)
tasks/: todo.md  trade-explorer-plan.md
tests/: test_backtest_runner.py  test_block_review_filter.py  test_candle_feed.py  test_cli.py  test_config_and_sessions.py  test_daily_loss_config.py  test_daily_reset.py  test_dashboard_data.py  test_dashboard_pages.py  test_emergency.py  test_env_loading.py  test_equity_curve.py  test_experiment.py  test_filters.py  test_history.py  test_history_paging.py  test_live_trader.py  test_logging.py  test_market_analysis.py  test_mean_reversion_strategy.py  test_news_avoidance.py  test_oanda_contract.py  test_oanda_health.py  test_oanda_integration.py  test_opening_range_breakout.py  test_optimizer.py  test_orchestrator_gates.py  test_orchestrator_trade_story.py  test_performance_over_time.py  test_pnl_fidelity.py  test_reconcile.py  test_regime_gate.py  test_regime_reversion_strategy.py  test_regime_strength.py  test_research_registry.py  test_review_summary.py  test_reviews_reporting_modes.py  test_risk_and_broker.py  test_run_state.py  test_self_observing_regime.py  (+16 more)
(+73 files in other folders)
