[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "forex-trader"
version = "0.1.0"
description = "Local-first EUR/USD simulated trading engine with reviews and reporting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.6",
  "pandas>=2.2",
  "plotly>=5.24",
  "streamlit>=1.39",
]

[project.scripts]
forex-trader = "forex_trader.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
  "mypy>=1.13",
]
broker = [
  "requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forex_trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Integration tests hit the live OANDA practice API; exclude them by default so
# the standard suite is hermetic. Run them with: pytest -m integration
addopts = "-ra -m 'not integration'"
markers = [
  "integration: tests that require external broker credentials and network",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

# plotly ships no type stubs; treat its imports as untyped rather than failing.
[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

